--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>	Modular Kitchen</title>
+	<title>Priya Modular Kitchen and Interiors</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
 
 
 
@@ -22,7 +22,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,300i,400,400i,500,600i,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -44,36 +44,28 @@
 
 	</head>
 	<body>
-		
+
 	<div class="fh5co-loader"></div>
-	
+
 	<div id="page">
 	<nav class="fh5co-nav" role="navigation">
 		<!-- <div class="top-menu"> -->
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-center logo-wrap">
-						<div id="fh5co-logo"><a href="index.html">Modular Kitchen<span>.</span></a></div>
+						<div id="fh5co-logo"><a href="index.html">Priya Modular Kitchen and Interiors<span>.</span></a></div>
 					</div>
 					<div class="col-xs-12 text-center menu-1 menu-wrap">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="menu.html">Our works</a></li>
-							<!--<li class="has-dropdown">-->
+							<li><a href="about.html">About Us</a></li>
+							<li><a href="menu.html">Finishes</a></li>
 							<li><a href="gallery.html">Gallery</a></li>
-								<!--<ul class="dropdown">
-									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Modular Kitchens</a></li>
-									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Interiors</a></li>
-									<li><a href="https://modularkitchengit.github.io/web/gallery.html">Furnitures</a></li>
-								</ul>-->
-							<!--</li>-->
-							<!--<li><a href="reservation.html">Reservation</a></li>-->
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="contact.html">Contact Us</a></li>
 						</ul>
 					</div>
 				</div>
-				
+
 			</div>
 		<!-- </div> -->
 	</nav>
@@ -85,8 +77,8 @@
 				<div class="col-md-12 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<h1> Amazing <!--<em>&amp;</em>--> - Modular Kitchen Designs  <!--<em>in</em>--> </h1>
-							<!--<h2>Brought to you by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>-->
+							<h1>Go stylish with modular kitchen and wardrobes</h1>
+							<h2>To Suit your budget</h2>
 						</div>
 					</div>
 				</div>
@@ -123,7 +115,7 @@
 						</div>
 					</div>
 				</div>
-				
+
 				<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-item-wrap animate-box">
 					<div class="fh5co-item">
 						<img src="images/gallery_9.jpeg" class="img-responsive" alt="Anonymity Freelancing">
@@ -246,7 +238,7 @@
 						   			</div>
 						   		</div>
 					   		</div>
-					   	</li>		   	
+					   	</li>
 					  	</ul>
 				  	</div>
 				</aside>
@@ -276,7 +268,7 @@
 								<li><i class="icon-eye2"></i>2K</li>
 								<li><a href="#">Know more<i class="icon-arrow-right22"></i></a></li>
 							</ul>
-						</div> 
+						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -291,7 +283,7 @@
 								<li><i class="icon-eye2"></i>2K</li>
 								<li><a href="#">Know More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
-						</div> 
+						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -306,13 +298,13 @@
 								<li><i class="icon-eye2"></i>2K</li>
 								<li><a href="#">Know More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
-						</div> 
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	
+
 	<div id="fh5co-started" class="fh5co-section animate-box" style="background-image: url(images/hero_1.jpeg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
@@ -331,7 +323,7 @@
 						<div class="col-lg-12">
 							<button type="submit" class="btn btn-lg btn-primary" style="display: block; margin: 0 auto;">Send Message</button>
 						</div>
-					</form>	
+					</form>
 				</div>
 				<div class="col-lg-6">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1943.065353088309!2d80.26364905221789!3d13.090901753472387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5265e59f75bb21%3A0xab2ca5245cc82382!2sVijayvinagar+Koil+St%2C+Choolai%2C+Chennai%2C+Tamil+Nadu+600112!5e0!3m2!1sen!2sin!4v1495532974566" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -343,38 +335,20 @@
 	<footer id="fh5co-footer" role="contentinfo" class="fh5co-section">
 		<div class="container">
 			<div class="row row-pb-md">
-				<div class="col-md-4 fh5co-widget">
+				<div class="col-md-6 fh5co-widget">
 					<h4>Modular Kitchen</h4>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 				</div>
-				<div class="col-md-2 col-md-push-1 fh5co-widget">
-					<h4>Links</h4>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Portfolio</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">About</a></li>
-					</ul>
-				</div>
 
-				<div class="col-md-2 col-md-push-1 fh5co-widget">
-					<h4>Categories</h4>
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Classic</a></li>
-						<li><a href="#">Offcial</a></li>
-						<li><a href="#">Personal</a></li>
-						<li><a href="#">Business</a></li>
-						<li><a href="#">e-Commerce</a></li>
-					</ul>
-				</div>
 
-				<div class="col-md-4 col-md-push-1 fh5co-widget">
+				<div class="col-md-6 col-md-push-1 fh5co-widget">
 					<h4>Contact Information</h4>
 					<ul class="fh5co-footer-links">
-						<li>198 /11, 21st Street, <br> Chennai </li>
-						<li><a href="tel://">+ 1234 56789</a></li>
-						<li><a href="mailto:">info@yoursite.com</a></li>
-						<li><a href="#"></a></li>
+						<li>V.D.Ravishankar</li>
+						<li>#32, V.V.Koil lane,</li>
+						<li>Choolai, Chennai-600112. </li>
+						<li><a href="tel://8939158825">8939158825</a></li>
+						<li><a href="mailto:loguvdrs@gmail.com">loguvdrs@gmail.com</a></li>
 					</ul>
 				</div>
 
@@ -383,7 +357,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2017 Anonymity Freelancing. All Rights Reserved.</small> 
+						<small class="block">&copy; 2017 Anonymity Freelancing. All Rights Reserved.</small>
 						<small class="block">Designed by <a href="#" target="_blank"></a>  <a href="#" target="_blank"> Anonymity Freelancing</a></small>
 					</p>
 					<p>
@@ -404,7 +378,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
