--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 	<title>	Modular Kitchen</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	
+
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -20,7 +20,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,300i,400,400i,500,600i,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -43,9 +43,9 @@
 
 	</head>
 	<body>
-		
+
 	<div class="fh5co-loader"></div>
-	
+
 	<div id="page">
 	<nav class="fh5co-nav" role="navigation">
 		<!-- <div class="top-menu"> -->
@@ -57,15 +57,14 @@
 					<div class="col-xs-12 text-center menu-1 menu-wrap">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="menu.html">Our works</a></li>
-							<!--<li class="has-dropdown">-->
+							<li><a href="about.html">About Us</a></li>
+							<li><a href="menu.html">Finishes</a></li>
 							<li><a href="gallery.html">Gallery</a></li>
-							<li><a href="about.html">About</a></li>
-							<li class="active"><a href="contact.html">Contact</a></li>
+							<li class="active"><a href="contact.html">Contact Us</a></li>
 						</ul>
 					</div>
 				</div>
-				
+
 			</div>
 		<!-- </div> -->
 	</nav>
@@ -87,7 +86,7 @@
 		</div>
 	</header>
 
-	
+
 	<div id="fh5co-contact" class="fh5co-section animate-box">
 		<div class="container">
 			<div class="row animate-box">
@@ -97,7 +96,7 @@
 					<p><a href="mailto:" class="btn btn-primary btn-outline">Contact Us</a></p>
 				</div>
 			</div>
-			
+
 			<div class="row">
 				<div class="col-md-6 col-md-push-6 col-sm-6 col-sm-push-6">
 					<form action="#" id="form-wrap">
@@ -175,7 +174,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2017 Anonymity Freelancing. All Rights Reserved.</small> 
+						<small class="block">&copy; 2017 Anonymity Freelancing. All Rights Reserved.</small>
 						<small class="block">Designed by <a href="#" target="_blank"></a>  <a href="#" target="_blank"> Anonymity Freelancing</a></small>
 					</p>
 					<p>
@@ -196,7 +195,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
