--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html ng-app="app">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,17 +14,20 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/flexslider.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/app.css">
 
-	<script src="js/modernizr-2.6.2.min.js"></script>
+
+	<!--<script src="js/modernizr-2.6.2.min.js"></script>-->
 </head>
-<body ng-app="app">
+<body>
 
 	<div class="fh5co-loader"></div>
+
 
 	<div id="page">
 		<div ng-include="'views/partials/navbar.html'"></div>
 
-		<div ui-view></div>
+		<ng-view></ng-view>
 
 		<div ng-include="'views/partials/footer.html'"></div>
 	</div>
@@ -34,8 +37,10 @@
 	</div>
 
 	<script src="js/angular.min.js"></script>
-	<script src="js/angular-ui-router.min.js"></script>
+	<script src="js/angular-route.min.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/route-config.js"></script>
+	<script src="js/detect-active-tab.js"></script>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.easing.1.3.js"></script>
 	<script src="js/bootstrap.min.js"></script>
