--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<div id="page">
 		<div ng-include="'views/partials/navbar.html'"></div>
 
-		<ng-view></ng-view>
+		<ui-view></ui-view>
 
 		<div ng-include="'views/partials/footer.html'"></div>
 	</div>
@@ -36,18 +36,17 @@
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
 	</div>
 
-	<script src="js/angular.min.js"></script>
-	<script src="js/angular-route.min.js"></script>
+	<script src="js/vendor/angular.min.js"></script>
+	<script src="js/vendor/angular-ui-router.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/route-config.js"></script>
-	<script src="js/detect-active-tab.js"></script>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery.easing.1.3.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.waypoints.min.js"></script>
-	<script src="js/jquery.stellar.min.js"></script>
-	<script src="js/jquery.flexslider-min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/vendor/jquery.min.js"></script>
+	<script src="js/vendor/jquery.easing.1.3.js"></script>
+	<script src="js/vendor/bootstrap.min.js"></script>
+	<script src="js/vendor/jquery.waypoints.min.js"></script>
+	<script src="js/vendor/jquery.stellar.min.js"></script>
+	<script src="js/vendor/jquery.flexslider-min.js"></script>
+	<script src="js/vendor/main.js"></script>
 
 </body>
 </html>
