--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html ng-app="app">
+<html ng-app="app" ng-cloak>
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,7 +38,9 @@
 
 	<script src="js/vendor/angular.min.js"></script>
 	<script src="js/vendor/angular-ui-router.min.js"></script>
+	<script src="js/vendor/angular-sanitize.min.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/hero-section.directive.js"></script>
 	<script src="js/route-config.js"></script>
 	<script src="js/vendor/jquery.min.js"></script>
 	<script src="js/vendor/jquery.easing.1.3.js"></script>
