--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
 
 	<!--<script src="js/modernizr-2.6.2.min.js"></script>-->
 </head>
-<body>
+<body run-vendor-functions>
 
 	<div class="fh5co-loader"></div>
 
 
 	<div id="page">
-		<div ng-include="'views/partials/navbar.html'"></div>
+
+		<navbar-section></navbar-section>
 
 		<ui-view></ui-view>
 
-		<div ng-include="'views/partials/footer.html'"></div>
+		<footer-section></footer-section>
+
 	</div>
 
 	<div class="gototop js-top">
@@ -39,16 +41,21 @@
 	<script src="js/vendor/angular.min.js"></script>
 	<script src="js/vendor/angular-ui-router.min.js"></script>
 	<script src="js/vendor/angular-sanitize.min.js"></script>
+
 	<script src="js/app.js"></script>
-	<script src="js/hero-section.directive.js"></script>
+	<script src="js/directives/vendor.directive.js"></script>
+	<script src="js/directives/hero-section.directive.js"></script>
+	<script src="js/directives/navbar-section.directive.js"></script>
+	<script src="js/directives/footer-section.directive.js"></script>
 	<script src="js/route-config.js"></script>
+
+	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 	<script src="js/vendor/jquery.min.js"></script>
 	<script src="js/vendor/jquery.easing.1.3.js"></script>
 	<script src="js/vendor/bootstrap.min.js"></script>
 	<script src="js/vendor/jquery.waypoints.min.js"></script>
 	<script src="js/vendor/jquery.stellar.min.js"></script>
 	<script src="js/vendor/jquery.flexslider-min.js"></script>
-	<script src="js/vendor/main.js"></script>
 
 </body>
 </html>
