--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="css/flexslider.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/app.css">
+	<link rel="stylesheet" href="css/app.responsive.css">
 
 </head>
 <body run-vendor-functions>
