--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
 	<script src="js/vendor/angular-sanitize.min.js"></script>
 
 	<script src="js/app.js"></script>
+	<script src="js/route-config.js"></script>
 	<script src="js/directives/vendor.directive.js"></script>
 	<script src="js/directives/hero-section.directive.js"></script>
 	<script src="js/directives/navbar-section.directive.js"></script>
 	<script src="js/directives/footer-section.directive.js"></script>
-	<script src="js/route-config.js"></script>
+	<script src="js/controllers/navbar.controller.js"></script>
 
 	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 	<script src="js/vendor/jquery.min.js"></script>
